--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </li>
       
               </ul>
-              <h3 class="p-2">UFs:</h3>
+              <h3 class="p-2">UF: </h3>
               <div class="" id="mostrarUf">
                 
               </div>
